# Rent_Store

./: manage.py  pyproject.toml
customer/: urls.py
customer/migrations/: 0001_initial.py
customer/models/: customer_model.py
customer/serializers/: __init__.py  customer_serializer.py
customer/views/: __init__.py  customer_view.py
movie/: urls.py
movie/migrations/: 0001_initial.py  0002_rename_avaliable_quantity_movie_available_quantity_and_more.py
movie/models/: __init__.py  movie_model.py
movie/serializers/: movie_serializer.py
movie/views/: __init__.py  movie_views.py
order/: urls.py
order/migrations/: 0001_initial.py  0002_rentalmodel_active.py
order/models/: __init__.py  rental_model.py
order/serializers/: __init__.py  rental_serializer.py
order/views/: RentalView.py  __init__.py
rentamovieconfig/: asgi.py  settings.py  urls.py  wsgi.py
